# avell-keyboard-customizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
kernel/: 0001-uniwill-expose-hardware-rainbow.patch  README.md  dkms.conf
packaging/: 99-avell-rgb.rules  avell-rgb.desktop  blacklist-clevo.conf  uniwill-keyboard.conf
scripts/: install.sh  uninstall.sh
src/avell_rgb/: __init__.py  app.py  backend.py  cli.py  color.py  controller.py  state.py  theme.py  widgets.py
tests/: test_color.py  test_controller.py  test_planner.py
